# ter

./: .gitignore  CMakeLists.txt  README.md  STATE-2026-05-15.md
cuda/: bench_v12.sh  results_hybrid_2026-05-17.csv  results_int4tc_real_2026-05-17.csv  results_v11_v12_2026-05-17.csv  results_v13_2026-05-17.csv  run_bench.ps1  run_bench_v13.ps1  run_hybrid_bench.ps1  run_hybrid_forward.ps1  run_int4_smoke.ps1  ter_cuda_addonly_batched.cu  ter_cuda_bench.cu  ter_cuda_bench2.cu  ter_cuda_bitnet_addonly.cu  ter_cuda_forward.cu  ter_cuda_forward_bitnet.cu  ter_cuda_forward_hybrid.cu  ter_cuda_forward_packed.cu  ter_cuda_forward_packed_v12.cu  ter_cuda_forward_packed_v13_bench.cu  ter_cuda_forward_packed_v13_cpasync.cu  ter_cuda_forward_packed_v13_int4tc.cu  ter_cuda_forward_packed_v13_lut.cu  ter_cuda_hybrid_bench.cu  ter_cuda_hybrid_dispatch.cu  ter_cuda_hybrid_dispatch_v13.cu  ter_cuda_int4_tc.cu  ter_cuda_int4_tc_tiled.cu  ter_cuda_packed.cu  ter_cuda_packed_batched.cu  ter_cuda_packed_scale.cu  ter_cuda_packed_v2.cu  ter_cuda_packed_v3.cu  ter_cuda_packed_v4.cu  ter_cuda_packed_v5.cu  ter_cuda_packed_v6.cu
docs/: PAPER.md  bridge-notes.md  isa.md  kernel-patterns.md  number-formats.md
docs/architectural-extensions/: ternary-activations.md
docs/baselines/: 2026-05-10-cuda-synthesis.md  2026-05-10-rtx3090.md  2026-05-15-cuda-round2.md
docs/superpowers/plans/: 2026-05-08-ter-foundation-f0-f2.md  2026-05-08-ter-quantizer-and-first-kernel-f3-f4a.md  2026-05-08-ter-rmsnorm-and-lut-f4b.md  2026-05-09-ter-attention-f4f.md  2026-05-09-ter-brandon-parser-f5f.md  2026-05-09-ter-gguf-load-f5e.md  2026-05-09-ter-multitoken-kvcache-f5c.md  2026-05-09-ter-plumb-kernels-f5d.md  2026-05-09-ter-rope-f4e.md  2026-05-09-ter-silu-f4d.md  2026-05-09-ter-softmax-f4c.md  2026-05-09-ter-transformer-layer-f5b.md  2026-05-09-ter-vendor-infra-f5a.md
docs/superpowers/specs/: 2026-05-08-ter-design.md
examples/: factorial.tasm  matmul_64.tasm
include/ter/: assembler.hpp  bitnet.hpp  counters.hpp  isa.hpp  kernels.hpp  memory.hpp  numfmt.hpp  pack.hpp  regfile.hpp  sim.hpp  tfloat.hpp  trit.hpp  tryte.hpp  vec.hpp  word.hpp
include/ter/host/: load_gguf.hpp
include/ter/tx/: forward.hpp  layer.hpp  lut_setup.hpp  op_stats.hpp  transformer.hpp
include/ter_k4/: ter_k4.h
paper/: Makefile  references.bib  ter_paper.aux  ter_paper.bbl  ter_paper.blg  ter_paper.md  ter_paper.out  ter_paper.tex
src/: CMakeLists.txt
src/asm/: emitter.cpp  lexer.cpp
src/core/: _stub.cpp  pack.cpp  vec.cpp  word.cpp
src/host/: load_gguf.cpp
src/isa/: decode.cpp  encode.cpp
src/k4/: ter_k4.cpp
src/kernels/: registry.cpp  tk_matmul_b_9t.tasm  tk_rmsnorm.tasm  tk_rope.tasm  tk_silu.tasm  tk_softmax.tasm
src/numfmt/: dequantize.cpp  quantize.cpp
src/sim/: call_kernel.cpp  load_lut.cpp  memory.cpp  regfile.cpp  run_one.cpp  sim.cpp
src/tx/: forward.cpp  layer.cpp  lut_setup.cpp  transformer.cpp
tests/: CMakeLists.txt  cuda_forward_correctness.cu  test_assembler.cpp  test_assembler_simd.cpp  test_attention.cpp  test_bitnet.cpp  test_bitnet_forward.cpp  test_bitnet_gguf_load.cpp  test_bitnet_post_quant.cpp  test_brandon_calibrate.cpp  test_brandon_config.cpp  test_brandon_forward.cpp  test_brandon_generate.cpp  test_brandon_tokenizer.cpp  test_call_kernel.cpp  test_counters.cpp  test_executor_control.cpp  test_executor_logic.cpp  test_executor_memory.cpp  test_executor_scalar.cpp  test_executor_simd.cpp  test_format_a_vs_b.cpp  test_format_a_vs_b_llama.cpp  test_isa.cpp  test_kernel_matmul_b_32.cpp  test_kernel_matmul_b_small.cpp  test_kernel_relocation.cpp  test_kernel_rmsnorm.cpp  test_kernel_rope.cpp  test_kernel_silu.cpp  test_kernel_softmax.cpp  test_layer_brandon_shape.cpp  test_layer_forward.cpp  test_layer_multitoken.cpp  test_layer_types.cpp  test_llama_bitnet_quality.cpp  test_llama_generate.cpp  test_llama_smoke.cpp  test_load_brandon_tiny.cpp  test_load_lut.cpp  (+24 more)
tools/: bitnet_pyfwd.py  convert_bitnet_to_packed.py  convert_llama_to_packed.py  dump_gguf_tensors.cpp  gen_rsqrt_lut.py  gen_sigmoid_lut.py  gen_softmax_luts.py  llama_fp_ref.py  llama_pyfwd.py  matmul_b_reference.py  matmul_reference.py
v2/: CMakeLists.txt
v2/docs/: hardware-modeling.md
v2/docs/data/: asic_nodes.csv  iters_sweep.csv  ntrits_sweep.csv
v2/include/tersim/: asic_model.hpp  bp_model.hpp  cache_model.hpp  cycle_model.hpp  gpu_model.hpp  report.hpp  trace.hpp
v2/scripts/: make_figures.py
v2/src/harness/: report.cpp  tersim_main.cpp
v2/src/layer1/: bp.cpp  cache.cpp  pipeline.cpp
v2/src/layer1_gpu/: gpu_model.cpp
v2/src/layer3/: asic_energy.cpp
v2/tests/: CMakeLists.txt  test_asic_energy.cpp  test_cache_hit_rates.cpp  test_forward_kernel_e2e.cpp  test_gpu_roofline.cpp  test_mshr_and_bp.cpp  test_pipeline_hazards.cpp  test_pipeline_tvmac.cpp  test_trace_capture.cpp
