cmake_minimum_required(VERSION 3.20)
project(tersim LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

# Pull in the parent ter library. Targets we depend on: `ter` (functional sim).
# EXCLUDE_FROM_ALL prevents parent tests/binaries from being built unless asked.
get_filename_component(_TER_PARENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.." ABSOLUTE)
add_subdirectory(${_TER_PARENT_DIR} ter_parent EXCLUDE_FROM_ALL)

add_library(tersim STATIC)
target_include_directories(tersim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(tersim PUBLIC ter)
target_compile_options(tersim PRIVATE
    -Wall -Wextra -Wpedantic -Werror
    $<$<CONFIG:Release>:-O3 -mavx2 -mfma>)

target_sources(tersim PRIVATE
    src/layer1/pipeline.cpp            # G2 + G3 (hazards/forwarding) + G5 (mshr/bp wiring)
    src/layer1/cache.cpp               # G4 + G5 (MSHR cap)
    src/layer1/bp.cpp                  # G5 (branch predictor)
    src/layer1_gpu/gpu_model.cpp       # G6-GPU (roofline; FPGA layer skipped, no hw)
    src/layer3/asic_energy.cpp         # G7
    src/harness/report.cpp             # G8 (JSON + CSV emitters)
)

# G8: unified harness binary `tersim_run`. Loads parent kernels at runtime
# via install_default_kernels; needs the same TER_KERNELS_DIR define as
# the e2e test.
get_filename_component(_TER_KERNELS_DIR
    "${CMAKE_CURRENT_SOURCE_DIR}/../src/kernels" ABSOLUTE)
# LUT data generated by the parent build (gen_*_lut.py → build/lut_data).
# The forward workload needs rsqrt/exp/rcp/sigmoid LUTs; point at the parent
# build dir. Build the parent once (cmake --build ../build) if missing.
get_filename_component(_TER_LUT_DIR
    "${CMAKE_CURRENT_SOURCE_DIR}/../build/lut_data" ABSOLUTE)
add_executable(tersim_run src/harness/tersim_main.cpp)
# nt_infra provides nt::GGUFLoader + nt::Sampler for the generate workload
# (real-weight model load + greedy argmax). It comes from the parent's
# vendor/ntransformer subdirectory.
target_link_libraries(tersim_run PRIVATE tersim ter nt_infra)
target_compile_options(tersim_run PRIVATE -Wall -Wextra -Wpedantic -Werror)
target_compile_definitions(tersim_run PRIVATE
    TER_KERNELS_DIR="${_TER_KERNELS_DIR}"
    TER_LUT_DIR="${_TER_LUT_DIR}")

enable_testing()
add_subdirectory(tests)
